# Esterv.Web.Shop

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: code-format.yml  conf-build-test-install.yml  lint.yml  qml-lint.yml
include/: object_core.hpp  product.hpp  reply.hpp  request.hpp
src/: object_core.cpp  product.cpp  reply.cpp  request.cpp  server.cpp  server.hpp  session.cpp  session.hpp
tests/: CMakeLists.txt  object_core_test.cpp  product_test.cpp
